--- a/style.css
+++ b/style.css
@@ -1,5 +1,9 @@
-button {
-    background-color: chocolate;
-    font-size: larger;
-    color: #fff;
+body {
+    background-color: #edebef;
+}
+
+botton{
+	
+	text-align: center; 
+
 }
